# Learning_Code_Practice

./: Makefile  README.md
Python/: 01_Variables.docx  01_Variables.py  02_Data_Types.docx  02_Data_Types.py  02_Operators.docx  03_Control_Statement.docx  03_Operators.py  04_Control_Statement.py  04_Loops.docx  04_Loops_Control.docx  05_Loops.py  06_Numbers.docx  06_Numbers.py  07_Strings.docx  07_Strings.py  07_Strings_Formatting.docx  07_Strings_Functions_Methods.docx  08_List.docx  08_List.py  08_List_Functions_Methods.docx  09_Tuples.docx  09_Tuples.py  09_Tuples_Functions_Methods.docx  10_Dictionary.docx  10_Dictionary.py  10_Dictionary_Functions_Methods.docx  10_Sets.py  11_Array.py  11_Functions.docx  12_File_IO.docx  12_File_Methods.docx  12_Functions.py  13_Exception.docx  13_Exception_Standard_Exceptions.docx  13_Exceptions.py  14_Modules.docx  15_Lambda.py  16_01_read_this_file.txt  16_File_IO.py  17_List_Comprehension.py  (+7 more)
Rust/: 06_02_The_match_Control_Flow_Construct.rs  06_03_Concise_Control_Flow_with_if_let.rs  07_01_Packages_and_Crates.docx  07_02_Defining_Modules_to_Control_Scope_and_Privacy.docx  07_03_Paths_for_Referring_to_an_Item_in_the_Module_Tree.docx  07_04_Bringing_Paths_into_Scope_with_the_use_Keyword.docx  07_05_Separating_Modules_into_Different_Files.docx  08_01_Storing_Lists_of_Values_with_Vectors.rs  08_03_Storing_Keys_with_Associated_Values_in_Hash_Maps.rs  09_01_Unrecoverable_Errors_with_panic.rs  09_02_Recoverable_Errors_with_Result.rs  09_03_To_panic_or_Not_to_panic.rs  (+1 more)
cmake_learning/: CMakeLists.txt
cmake_learning/include/dynamic_lib/: dynamic_lib.hpp
cmake_learning/include/functions/: functions.hpp
cmake_learning/include/main/: main.hpp
cmake_learning/include/static_lib/: static_lib.hpp
cmake_learning/src/: CMakeLists.txt
cmake_learning/src/dynamic_lib/: dynamic_lib.cpp
cmake_learning/src/functions/: CMakeLists.txt  functions.cpp
cmake_learning/src/main/: CMakeLists.txt  main.cpp
cmake_learning/src/static_lib/: static_lib.cpp
(+1817 files in other folders)
